working minimal instal with no configs

--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -1,33 +1,42 @@
-# http/ks.cfg
+# System language and keyboard
 lang en_US.UTF-8
 keyboard us
+
+# Timezone
 timezone America/Toronto --isUtc
+
+# Root password (plaintext for simplicity)
 rootpw --plaintext abc
+
+# Authentication and security
 auth --useshadow --passalgo=sha512
 selinux --disabled
 firewall --disabled
 
-# NAT interface (ens160)
+# Networking
 network --bootproto=dhcp --device=ens160 --onboot=on
-
-# Bridged interface (ens224)
 network --bootproto=static --ip=172.16.30.48 --netmask=255.255.0.0 --device=ens224 --onboot=on
-network --bootproto=static --ip=172.16.32.48 --netmask=255.255.0.0 --device=ens224:1 --onboot=on
 
+# Bootloader and disk layout
 bootloader --location=mbr
 clearpart --all --initlabel
 autopart
-reboot
 
+# Package selection
 %packages
-@^server-with-gui
+@^minimal-environment
 chrony
 %end
 
+# Post-install setup
 %post --log=/root/ks-post.log
-dnf update -y
+# Create lab user
 useradd lab
 echo test | passwd --stdin lab
 
+# Set hostname
 hostnamectl set-hostname haja0013-SRV.example48.lab
 %end
+
+# Reboot after install
+reboot
